--- a/elementos-pos-textuais/referencias.bib
+++ b/elementos-pos-textuais/referencias.bib
@@ -54,6 +54,17 @@ publisher = "Blucher"
    year =      {2002},
    }.
 %url =       {libgen.li/file.php?md5=8adc0397b108b380c863d39a84b4dd06}
+
+@book{probabilidade,
+   title =     {Probabilidade um curso intermediário},
+   author =    {Barry R James},
+   publisher = {IMPA},
+   isbn =      {9788524404146; 8524404140},
+   year =      {2015},
+   series =    {Projeto Euclides},
+   edition =   {4},
+   }
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @article{BROLEZZI,
