--- a/elementos-pos-textuais/referencias.bib
+++ b/elementos-pos-textuais/referencias.bib
@@ -64,7 +64,15 @@ publisher = "Blucher"
    series =    {Projeto Euclides},
    edition =   {4},
    }
-
+   
+@book{rudin,
+   title =     {Principles of mathematical analysis},
+   author =    {Walter Rudin},
+   publisher = {McGraw-Hill},
+   isbn =      {007054235X; 9780070542358},
+   year =      {1976},
+   series =    {International series in pure and applied mathematics},
+   edition =   {3d ed}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @article{BROLEZZI,
