--- a/documento.tex
+++ b/documento.tex
@@ -183,7 +183,7 @@
 	\textual
 		%\input{elementos-textuais/1Introdução}
         \input{elementos-textuais/espacos-funcoes-mensuraveis}
-        %\input{elementos-textuais/teoria-medida}
+        \input{elementos-textuais/teoria-medida}
         %\input{elementos-textuais/teoria-integracao}
         %\input{elementos-textuais/considerações-finais}
         %Elementos pós-textuais	
